[package]
name = "rollbar-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.53"
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.16"
once_cell = "1.10.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread"] }
typed-builder = "0.10.0"

# wasm dependencies
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.29"
