[package]
name = "rollbar-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
nodejs = ["neon", "neon-serde2", "tokio"]

[dependencies]
futures = "0.3.21"
neon = { version = "0.8", default-features = false, features = ["napi-6"], optional = true }
neon-serde2 = { version = "0.8.0", optional = true }
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", optional = true, features = ["rt", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.29"
