[package]
name = "rollbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
nodejs = ["neon", "neon-serde2"]
c = []

[dependencies]
cfg-if = "1.0.0"
futures = "0.3.21"
libc = "0.2.126"
neon = { version = "0.8", default-features = false, features = ["napi-6"], optional = true }
neon-serde2 = { version = "0.8.0", optional = true }
once_cell = "1.10.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
typed-builder = "0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.29"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
cbindgen = "0.23.0"

[dev-dependencies]
tokio-test = "0.4.2"
wiremock = "0.5.13"
