[package]
name = "rollbar-node"
version = "0.1.0"
description = "Rollbar SDK built natively for node."
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
